EKZ-9 Correct layout after first test on mobile.

--- a/prototyp/src/EntireList/EntireList.css
+++ b/prototyp/src/EntireList/EntireList.css
@@ -1,23 +1,23 @@
 entire-list {
     background-color: var(--dark-primary);
     display: block;
-    height: calc(100vh - 3.85rem);
+    height: calc(100vh - 4rem);
 }
 
 entire-list visual-background {
     display: block;
     background-color: var(--light-secondary);
     border: var(--dark-primary) solid 0.1em;
-    border-radius: 0.3rem;
-    width: calc(100% - 3rem);
-    height: calc(100vh - 4.25rem);
+    border-radius: 0.5rem;
+    width: calc(100% - 4.75rem);
+    height: calc(100% - 2.3rem);
     margin-left: 0.2em;
 }
 
 entire-list entity-list {
     display: block;
     width: calc(100% - 0.6rem);
-    height: calc(100vh - 4.25rem);
+    height: calc(100% - 2.4rem);
     margin-left: 0.4em;
     margin-right: 0.2em;
     margin-top: 0.1em;
@@ -28,30 +28,29 @@ entire-list entity-list {
 
 list-entity {
     display: block;
-    height: 1.6rem;
+    height: 2.5rem;
+    padding-top: 0.2rem;
 }
 
 list-entity list-label {
     display: block;
-    border-bottom: var(--light-primary) solid 0.05em;
-    width: calc(100% - 2.85rem);
-    height: 1.4em;
-    padding: 0.2em;
+    border-bottom: var(--light-primary) solid 0.1rem;
+    width: calc(100% - 4.4rem);
+    height: calc(100% - 0.1rem);
     float: left;
     font-family: 'Roboto', sans-serif;
-    font-size: 0.85em;
+    font-size: 1.3rem;
     user-select: none;
 }
 
 list-entity button {
-    border: 0.1em solid var(--dark-secondary);
+    border: 0.15rem solid var(--dark-primary);
     background-color: var(--light-primary);
-    border-radius: 0.3em;
-    width: 2.2rem;
-    height: 1.4rem;
-    margin-top: 0.1em;
-    margin-left: 0.2em;
+    border-radius: 0.5rem;
+    width: 3.5rem;
+    height: 2.3rem;
     filter: hue-rotate(90deg);
+    margin-left: 0.5rem;
 }
 
 list-entity button {
@@ -67,6 +66,6 @@ list-entity button:active {
 }
 
 list-entity button > img {
-    margin-top: 0.15em;
+    margin-top: 0.2rem;
     height: 80%;
 }
