--- a/prototyp/src/PrimaryInput/PrimaryInput.css
+++ b/prototyp/src/PrimaryInput/PrimaryInput.css
@@ -1,26 +1,28 @@
 primary-input {
     display: block;
     background-color: var(--dark-primary);
-    height: 1.6rem;
-    padding: 0.3em 0.4em 0.4em 0.2em;
+    height: 2.5rem;
+    padding: 0.25em 0.6em 0.6em 0.2em;
 }
 
 primary-input input-frame {
     display: block;
     background-color: var(--light-secondary);
     width: 100%;
-    height: 1.5rem;
-    border: 0.1em solid var(--dark-secondary);
-    border-radius: 0.3em;
+    height: 100%;
+    border: 0.2rem solid var(--dark-secondary);
+    border-radius: 0.5em;
 }
 
 primary-input input {
     display: block;
     color: var(--dark-tertiary);
-    width: calc(100% - 4.7rem);
+    background-color: var(--light-secondary);
+    width: calc(100% - 7.5rem);
+    height: 2.3rem;
     border-width: 0;
     font-family: 'Roboto', sans-serif;
-    font-size: 0.85em;
+    font-size: 1.3rem;
     vertical-align: top;
     margin-left: 0.1em;
     margin-top: 0.1em;
@@ -32,10 +34,10 @@ primary-input input:focus {
 }
 
 primary-input button {
-    width: 2.1rem;
-    height: 1.35rem;
-    border: 0.1em solid var(--dark-secondary);
-    border-radius: 0.3em;
+    width: 3.5rem;
+    height: 2.3rem;
+    border: 0.15rem solid var(--dark-secondary);
+    border-radius: 0.5rem;
     margin: 0.1em;
     background-color: var(--light-primary);
 }
@@ -53,7 +55,7 @@ primary-input button:active {
 }
 
 primary-input button > img {
-    margin-top: 0.15em;
+    margin-top: 0.25em;
     height: 80%;
 }
 
